# simple-chess

./: CMakeLists.txt  README.md  botMove.cpp  botMove.h  containsObstacles.cpp  containsObstacles.h  defineBoardSize.cpp  defineBoardSize.h  findCoordinates.cpp  findCoordinates.h  generateBoard.cpp  generateBoard.h  isCheckmate.cpp  isCheckmate.h  main.cpp  mainMenu.cpp  mainMenu.h  play.cpp  play.h  printBoard.cpp  printBoard.h
